tests/NormalTests/paczka1/fuzzy1/51458029.err
Error in line 4: C5FYO A931 o8,0
Error in line 2: A864 A864 98,5
Error in line 16: A864 A93G G5G,9
Error in line 21: 5YQT A931 3,2
Error in line 29: C5FYO A864 595
Error in line 12: A864 A931 36,0
